#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT(wgs2sgf, 1.4, admin@annhe.net)
AC_CONFIG_SRCDIR([src/common.cpp])
#AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE(wgs2sgf,1.4)
# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
